fixed overflow issue for larger images on portfolio page

--- a/css/scss/_theme.scss
+++ b/css/scss/_theme.scss
@@ -180,6 +180,7 @@ body{
 	max-width:600px;
 	border-radius: 9%;
 	margin-bottom:1em;
+	max-height: 180px;
 }
 [class*="col-"] {
   padding: 1.2em;
